tests/errors/array_constructor_with_different_char_lengths_cc.f90
program array_constructor_with_different_char_lengths
    print *, ["a", "b", "ball", "cat"]
    print *, ["a1", "b1", "ball1", "cat1"]
    print *, "compilation continued despite errors"
end program
